fix: Small semantic cleanups